add promocode info
